--- a/index.html
+++ b/index.html
@@ -4,45 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Веб-студия -> Главная</title>
+    <title>Студия -> Веб-студия</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+        integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+        crossorigin="anonymous" />
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
 
-    <header>
-        <nav>
-        <a href="" lang="en"><span>Web</span>Studio</a>
-        <ul>
-            <li>
-                <a href="">Студия</a>
+    <header class="main-header">
+        <nav class="navigation">
+        <a class="logo link" href="./index.html" lang="en"><span class="part-logo">Web</span>Studio</a>
+        <ul class="navigation-list list">
+            <li class="navigation-item">
+                <a class="navigation-link link" href="./index.html">Студия</a>
             </li>
-            <li>
-                <a href="">Портфолио</a>
+            <li class="navigation-item">
+                <a class="navigation-link link" href="./portfolio.html">Портфолио</a>
             </li>
-            <li>
-                <a href="">Контакты</a>
+            <li class="navigation-item">
+                <a class="navigation-link link" href="">Контакты</a>
             </li>
         </ul>
         </nav>
-        <ul>
-            <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul class="list-contacts list">
+            <li class="list-contacts-item">
+                <a class="channel-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="list-contacts-item">
+                <a class="channel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
-    <main>
+    <main class="">
         <!-- HERO SECTION -->
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+            <button class="modal-btn" type="button">Заказать услугу</button>
         </section>
         <!-- ADVANTAGES -->
         <section>
             <h2 hidden>Наши преимущества</h2>
-            <ul>
+            <ul class="list">
                 <li>
                     <h3>Внимание к деталям</h3>
                         <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -64,7 +71,7 @@
         <!-- WHAT WE DO -->
         <section>
             <h2>Чем мы занимаемся</h2>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/what_we_do/what_img_1.jpg" alt="разработчик пишет код" width="370" height="294">
                 </li>
@@ -79,7 +86,7 @@
         <!-- OUR TEAM -->
         <section>
             <h2>Наша команда</h2>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/team/igor.jpg" alt="парень в бордовой рубашке с бородой и в очках улыбается для фото" width="270" height="260">
                     <h3>Игорь Демьяненко</h3>
@@ -105,18 +112,18 @@
     </main>
     <footer>
     <!-- CONTACT INFORMATION -->
-        <a href="" lang="en"><span>Web</span>Studio</a>
-        <address>
-        <ul>
+        <a class="link logo logo-white" href="./index.html" lang="en"><span class="part-logo">Web</span>Studio</a>
+        <address class="address">
+        <ul class="list">
             <li>
-                <a href="https://goo.gl/maps/SzbFPfj4iSwk4chh7" target="_blank" rel="noopener noreferrer">
+                <a class="link" href="https://goo.gl/maps/SzbFPfj4iSwk4chh7" target="_blank" rel="noopener noreferrer">
                     г. Киев, пр-т Леси Украинки, 26</a>
             </li>
             <li>
-                <a href="mailto:info@example.com" lang="en">info@example.com</a>
+                <a class="link" href="mailto:info@example.com" lang="en">info@example.com</a>
             </li>
             <li>
-                <a href="tel:+380991111111">+38 099 111 11 11</a>
+                <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
             </li>
         </ul>
         </address>
