--- a/portfolio.html
+++ b/portfolio.html
@@ -5,29 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио -> Веб-студия</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+        integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+        crossorigin="anonymous" />
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
     <header>
         <nav>
-            <a href="" lang="en"><span>Web</span>Studio</a>
-            <ul>
+            <a class="link logo" href="./index.html" lang="en"><span class="part-logo">Web</span>Studio</a>
+            <ul class="list">
                 <li>
-                    <a href="">Студия</a>
+                    <a class="link" href="./index.html">Студия</a>
                 </li>
                 <li>
-                    <a href="">Портфолио</a>
+                    <a class="link" href="./portfolio.html">Портфолио</a>
                 </li>
                 <li>
-                    <a href="">Контакты</a>
+                    <a class="link" href="">Контакты</a>
                 </li>
             </ul>
         </nav>
-        <ul>
+        <ul class="list">
             <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
@@ -35,110 +43,88 @@
         <!-- BUTTON SECTION -->
         <section>
         <h1 hidden>Портфолио</h1>
-        <ul>
+        <ul class="list">
             <li>
-                <a href="#">
-                    <button type="button">Все</button>
-                </a>
-                
+                <button type="button">Все</button>
             </li>
             <li>
-                <a href="#">
                 <button type="button">Веб-сайты</button>
-                </a>
             </li>
             <li>
-                <a href="#">
-                    <button type="button">Приложения</button>
-                </a>
+                <button type="button">Приложения</button>
             </li>
             <li>
-                <a href="#">
-                    <button type="button">Дизайн</button>
-                </a>
+                <button type="button">Дизайн</button>
             </li>
             <li>
-                <a href="#">
-                    <button type="button">Маркетинг</button>
-                </a>
+                <button type="button">Маркетинг</button>
             </li>
         </ul>
-        </section>
         <!-- OUR WORKS -->
-        <section>
-            <h2 hidden>Наши работы</h2>
-            <ul>
+        <h2 hidden>Наши работы</h2>
+            <ul class="list">
                 <li>
-                    <img src="./images/portfolio/portfolio-img1.jpg" alt="открытый ноутбук">
+                    <img src="./images/portfolio/portfolio-img1.jpg" alt="открытый ноутбук" width="370" height="294">
                         <h3>Технокряк</h3>
-                            <p>Веб-сайт</p>
-                    </img>
+                        <p>Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/portfolio-img2.jpg" alt="баскетболисты играют в баскетбол">
-                        <h3>Постер New Orlean vs Golden Star</h3>
-                            <p>Дизайн</p>
-                    </img>
+                    <img src="./images/portfolio/portfolio-img2.jpg" alt="баскетболисты играют в баскетбол" width="370" height="294">
+                        <h3>Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                        <p>Дизайн</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/portfolio-img3.jpg" alt="логотип ресторана в виде рыбы">
+                    <img src="./images/portfolio/portfolio-img3.jpg" alt="логотип ресторана в виде рыбы" width="370" height="294">
                         <h3>Ресторан Seafood</h3>
-                            <p>Приложение</p>
-                    </img>
+                        <p>Приложение</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/portfolio-img4.jpg" alt="наушники">
+                    <img src="./images/portfolio/portfolio-img4.jpg" alt="наушники" width="370" height="294">
                         <h3>Проект <span lang="en">Prime</span></h3>
-                            <p>Маркетинг</p>
-                    </img>
+                        <p>Маркетинг</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/portfolio-img5.jpg" alt="две коробочки">
+                    <img src="./images/portfolio/portfolio-img5.jpg" alt="две коробочки" width="370" height="294">
                         <h3>Проект <span lang="en">Boxes</span></h3>
-                            <p>Приложение</p>
-                    </img>
+                        <p>Приложение</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/portfolio-img6.jpg" alt="монитор Apple">
+                    <img src="./images/portfolio/portfolio-img6.jpg" alt="монитор Apple" width="370" height="294">
                         <h3 lang="en">Inspiration has no Borders</h3>
-                            <p>Веб-сайт</p>
-                    </img>
+                        <p>Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/portfolio-img7.jpg" alt="раскрытая книга">
+                    <img src="./images/portfolio/portfolio-img7.jpg" alt="раскрытая книга" width="370" height="294">
                         <h3>Издание <span lang="en">Limited Edition</span></h3>
-                            <p>Дизайн</p>
-                    </img>
+                        <p>Дизайн</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/portfolio-img8.jpg" alt="бирка">
+                    <img src="./images/portfolio/portfolio-img8.jpg" alt="бирка" width="370" height="294">
                         <h3>Проект <span lang="en">LAB</span></h3>
-                            <p>Маркетинг</p>
-                    </img>
+                        <p>Маркетинг</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/portfolio-img9.jpg" alt="руки набирают текст на ноутбуке">
+                    <img src="./images/portfolio/portfolio-img9.jpg" alt="руки набирают текст на ноутбуке" width="370" height="294">
                         <h3 lang="en">Growing Business</h3>
-                            <p>Приложение</p>
-                    </img>
+                        <p>Приложение</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
         <!-- CONTACT INFORMATION -->
-        <a href="" lang="en"><span>Web</span>Studio</a>
-        <address>
-            <ul>
+        <a class="link logo logo-white" href="./index.html" lang="en"><span class="part-logo">Web</span>Studio</a>
+        <address class="address">
+            <ul class="list">
                 <li>
-                    <a href="https://goo.gl/maps/SzbFPfj4iSwk4chh7" target="_blank" rel="noopener noreferrer">
+                    <a class="link" href="https://goo.gl/maps/SzbFPfj4iSwk4chh7" target="_blank" rel="noopener noreferrer">
                         г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
                 <li>
-                    <a href="mailto:info@example.com" lang="en">info@example.com</a>
+                    <a class="link" href="mailto:info@example.com" lang="en">info@example.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380991111111">+38 099 111 11 11</a>
+                    <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
