--- a/index.html
+++ b/index.html
@@ -33,97 +33,97 @@
         </nav>
         <ul class="list-contacts list">
             <li class="list-contacts-item">
-                <a class="channel-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="mail channel-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li class="list-contacts-item">
                 <a class="channel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
-    <main class="">
+    <main class="main">
         <!-- HERO SECTION -->
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
+        <section class="hero">
+            <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
             <button class="modal-btn" type="button">Заказать услугу</button>
         </section>
         <!-- ADVANTAGES -->
-        <section>
+        <section class="advantages">
             <h2 hidden>Наши преимущества</h2>
-            <ul class="list">
-                <li>
-                    <h3>Внимание к деталям</h3>
-                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <ul class="advantages-list list">
+                <li class="advantages-list-item">
+                    <h3 class="advantages-list-title">Внимание к деталям</h3>
+                        <p class="advantages-list-description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li>
-                    <h3>Пунктуальность</h3>
-                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <li class="advantages-list-item">
+                    <h3 class="advantages-list-title">Пунктуальность</h3>
+                        <p class="advantages-list-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li>
-                    <h3>Планирование</h3>
-                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <li class="advantages-list-item">
+                    <h3 class="advantages-list-title">Планирование</h3>
+                        <p class="advantages-list-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li>
-                    <h3>Современные технологии</h3>
-                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <li class="advantages-list-item">
+                    <h3 class="advantages-list-title">Современные технологии</h3>
+                        <p class="advantages-list-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
         <!-- WHAT WE DO -->
-        <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul class="list">
-                <li>
-                    <img src="./images/what_we_do/what_img_1.jpg" alt="разработчик пишет код" width="370" height="294">
+        <section class="our-work">
+            <h2 class="second-title">Чем мы занимаемся</h2>
+            <ul class="work-list list">
+                <li class="work-list-item">
+                    <img class="work-list-img" src="./images/what_we_do/what_img_1.jpg" alt="разработчик пишет код" width="370" height="294">
                 </li>
-                <li>
-                    <img src="./images/what_we_do/what_img_2.jpg" alt="дизайнер выбирает варианты мобильной версии сайта" width="370" height="294">
+                <li class="work-list-item">
+                    <img class="work-list-img" src="./images/what_we_do/what_img_2.jpg" alt="дизайнер выбирает варианты мобильной версии сайта" width="370" height="294">
                 </li>
-                <li>
-                    <img src="./images/what_we_do/what_img_3.jpg" alt="дизайнер выбирает цветовую палитру" width="370" height="294">
+                <li class="work-list-item">
+                    <img class="work-list-img" src="./images/what_we_do/what_img_3.jpg" alt="дизайнер выбирает цветовую палитру" width="370" height="294">
                 </li>
             </ul>
         </section>
         <!-- OUR TEAM -->
-        <section>
-            <h2>Наша команда</h2>
-            <ul class="list">
-                <li>
-                    <img src="./images/team/igor.jpg" alt="парень в бордовой рубашке с бородой и в очках улыбается для фото" width="270" height="260">
-                    <h3>Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p>
+        <section class="team">
+            <h2 class="second-title">Наша команда</h2>
+            <ul class="team-list list">
+                <li class="team-list-item">
+                    <img class="team-list-img" src="./images/team/igor.jpg" alt="парень в бордовой рубашке с бородой и в очках улыбается для фото" width="270" height="260">
+                    <h3 class="third-title">Игорь Демьяненко</h3>
+                    <p class="team-list-description" lang="en">Product Designer</p>
                 </li>
-                <li>
-                    <img src="./images/team/olga.jpg" alt="девушка-блондинка в пиджаке и очках улыбается для фото" width="270" height="260">
-                    <h3>Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
+                <li class="team-list-item">
+                    <img class="team-list-img" src="./images/team/olga.jpg" alt="девушка-блондинка в пиджаке и очках улыбается для фото" width="270" height="260">
+                    <h3 class="third-title">Ольга Репина</h3>
+                    <p class="team-list-description" lang="en">Frontend Developer</p>
                 </li>
-                <li>
-                    <img src="./images/team/nikolai.jpg" alt="парень в светлой рубашке улыбается и смотрит в сторону" width="270" height="260">
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
+                <li class="team-list-item">
+                    <img class="team-list-img" src="./images/team/nikolai.jpg" alt="парень в светлой рубашке улыбается и смотрит в сторону" width="270" height="260">
+                    <h3 class="third-title">Николай Тарасов</h3>
+                    <p class="team-list-description" lang="en">Marketing</p>
                 </li>
-                <li>
-                    <img src="./images/team/mihail.jpg" alt="парень с бородой, в очках и черной футболке" width="270" height="260">
-                    <h3>Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
+                <li class="team-list-item">
+                    <img class="team-list-img" src="./images/team/mihail.jpg" alt="парень с бородой, в очках и черной футболке" width="270" height="260">
+                    <h3 class="third-title">Михаил Ермаков</h3>
+                    <p class="team-list-description" lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
+    <footer class="contact-information">
     <!-- CONTACT INFORMATION -->
         <a class="link logo logo-white" href="./index.html" lang="en"><span class="part-logo">Web</span>Studio</a>
         <address class="address">
-        <ul class="list">
-            <li>
-                <a class="link" href="https://goo.gl/maps/SzbFPfj4iSwk4chh7" target="_blank" rel="noopener noreferrer">
+        <ul class="contact-list list">
+            <li class="contact-list-item">
+                <a class="contact-link-address link" href="https://goo.gl/maps/SzbFPfj4iSwk4chh7" target="_blank" rel="noopener noreferrer">
                     г. Киев, пр-т Леси Украинки, 26</a>
             </li>
-            <li>
-                <a class="link" href="mailto:info@example.com" lang="en">info@example.com</a>
+            <li class="contact-list-item">
+                <a class="contact-link-item link" href="mailto:info@example.com" lang="en">info@example.com</a>
             </li>
-            <li>
-                <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
+            <li class="contact-list-item">
+                <a class="contact-link-item link" href="tel:+380991111111">+38 099 111 11 11</a>
             </li>
         </ul>
         </address>
