--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a class="logo link" href="./index.html" lang="en"><span class="part-logo">Web</span>Studio</a>
         <ul class="navigation-list list">
             <li class="navigation-item">
-                <a class="navigation-link link" href="./index.html">Студия</a>
+                <a class="navigation-link link current" href="./index.html">Студия</a>
             </li>
             <li class="navigation-item">
                 <a class="navigation-link link" href="./portfolio.html">Портфолио</a>
@@ -33,14 +33,14 @@
         </nav>
         <ul class="list-contacts list">
             <li class="list-contacts-item">
-                <a class="mail channel-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="channel-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li class="list-contacts-item">
                 <a class="channel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
-    <main class="main">
+    <main class="main-content">
         <!-- HERO SECTION -->
         <section class="hero">
             <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
