--- a/portfolio.html
+++ b/portfolio.html
@@ -15,116 +15,117 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a class="link logo" href="./index.html" lang="en"><span class="part-logo">Web</span>Studio</a>
-            <ul class="list">
-                <li>
-                    <a class="link" href="./index.html">Студия</a>
+    <header class="main-header">
+        <nav class="navigation">
+            <a class="logo link" href="./index.html" lang="en"><span class="part-logo">Web</span>Studio</a>
+            <ul class="navigation-list list">
+                <li class="navigation-item">
+                    <a class="navigation-link link" href="./index.html">Студия</a>
                 </li>
-                <li>
-                    <a class="link" href="./portfolio.html">Портфолио</a>
+                <li class="navigation-item">
+                    <a class="navigation-link link current" href="./portfolio.html">Портфолио</a>
                 </li>
-                <li>
-                    <a class="link" href="">Контакты</a>
+                <li class="navigation-item">
+                    <a class="navigation-link link" href="">Контакты</a>
                 </li>
             </ul>
         </nav>
-        <ul class="list">
-            <li>
-                <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul class="list-contacts list">
+            <li class="list-contacts-item">
+                <a class="mail channel-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li>
-                <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="list-contacts-item">
+                <a class="channel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
-    <main>
-        <!-- BUTTON SECTION -->
-        <section>
+    <main class="main-content">
+        <!-- FILTER -->
+        <section class="filter-works">
         <h1 hidden>Портфолио</h1>
-        <ul class="list">
-            <li>
-                <button type="button">Все</button>
+        <ul class="filter-works-list list">
+            <li class="filter-works-item">
+                <button class="filter-works-btn" type="button">Все</button>
             </li>
-            <li>
-                <button type="button">Веб-сайты</button>
+            <li class="filter-works-item">
+                <button class="filter-works-btn" type="button">Веб-сайты</button>
             </li>
-            <li>
-                <button type="button">Приложения</button>
+            <li class="filter-works-item">
+                <button class="filter-works-btn" type="button">Приложения</button>
             </li>
-            <li>
-                <button type="button">Дизайн</button>
+            <li class="filter-works-item">
+                <button class="filter-works-btn" type="button">Дизайн</button>
             </li>
-            <li>
-                <button type="button">Маркетинг</button>
+            <li class="filter-works-item">
+                <button class="filter-works-btn" type="button">Маркетинг</button>
             </li>
         </ul>
         <!-- OUR WORKS -->
         <h2 hidden>Наши работы</h2>
-            <ul class="list">
-                <li>
-                    <img src="./images/portfolio/portfolio-img1.jpg" alt="открытый ноутбук" width="370" height="294">
-                        <h3>Технокряк</h3>
-                        <p>Веб-сайт</p>
+            <ul class="works-list list">
+                <li class="works-list-item">
+                    <img class="works-list-img" src="./images/portfolio/portfolio-img1.jpg" alt="открытый ноутбук" width="370" height="294">
+                        <h3 class="works-img-name">Технокряк</h3>
+                        <p class="works-img-description">Веб-сайт</p>
                 </li>
-                <li>
-                    <img src="./images/portfolio/portfolio-img2.jpg" alt="баскетболисты играют в баскетбол" width="370" height="294">
-                        <h3>Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-                        <p>Дизайн</p>
+                <li class="works-list-item">
+                    <img class="works-list-img" src="./images/portfolio/portfolio-img2.jpg" alt="баскетболисты играют в баскетбол" width="370" height="294">
+                        <h3 class="works-img-name">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                        <p class="works-img-description">Дизайн</p>
                 </li>
-                <li>
-                    <img src="./images/portfolio/portfolio-img3.jpg" alt="логотип ресторана в виде рыбы" width="370" height="294">
-                        <h3>Ресторан Seafood</h3>
-                        <p>Приложение</p>
+                <li class="works-list-item">
+                    <img class="works-list-img" src="./images/portfolio/portfolio-img3.jpg" alt="логотип ресторана в виде рыбы" width="370" height="294">
+                        <h3 class="works-img-name">Ресторан Seafood</h3>
+                        <p class="works-img-description">Приложение</p>
                 </li>
-                <li>
-                    <img src="./images/portfolio/portfolio-img4.jpg" alt="наушники" width="370" height="294">
-                        <h3>Проект <span lang="en">Prime</span></h3>
-                        <p>Маркетинг</p>
+                <li class="works-list-item">
+                    <img class="works-list-img" src="./images/portfolio/portfolio-img4.jpg" alt="наушники" width="370" height="294">
+                        <h3 class="works-img-name">Проект <span lang="en">Prime</span></h3>
+                        <p class="works-img-description">Маркетинг</p>
                 </li>
-                <li>
-                    <img src="./images/portfolio/portfolio-img5.jpg" alt="две коробочки" width="370" height="294">
-                        <h3>Проект <span lang="en">Boxes</span></h3>
-                        <p>Приложение</p>
+                <li class="works-list-item">
+                    <img class="works-list-img" src="./images/portfolio/portfolio-img5.jpg" alt="две коробочки" width="370" height="294">
+                        <h3 class="works-img-name">Проект <span lang="en">Boxes</span></h3>
+                        <p class="works-img-description">Приложение</p>
                 </li>
-                <li>
-                    <img src="./images/portfolio/portfolio-img6.jpg" alt="монитор Apple" width="370" height="294">
-                        <h3 lang="en">Inspiration has no Borders</h3>
-                        <p>Веб-сайт</p>
+                <li class="works-list-item">
+                    <img class="works-list-img" src="./images/portfolio/portfolio-img6.jpg" alt="монитор Apple" width="370" height="294">
+                        <h3 class="works-img-name" lang="en">Inspiration has no Borders</h3>
+                        <p class="works-img-description">Веб-сайт</p>
                 </li>
-                <li>
-                    <img src="./images/portfolio/portfolio-img7.jpg" alt="раскрытая книга" width="370" height="294">
-                        <h3>Издание <span lang="en">Limited Edition</span></h3>
-                        <p>Дизайн</p>
+                <li class="works-list-item">
+                    <img class="works-list-img" src="./images/portfolio/portfolio-img7.jpg" alt="раскрытая книга" width="370" height="294">
+                        <h3 class="works-img-name">Издание <span lang="en">Limited Edition</span></h3>
+                        <p class="works-img-description">Дизайн</p>
                 </li>
-                <li>
-                    <img src="./images/portfolio/portfolio-img8.jpg" alt="бирка" width="370" height="294">
-                        <h3>Проект <span lang="en">LAB</span></h3>
-                        <p>Маркетинг</p>
+                <li class="works-list-item">
+                    <img class="works-list-img" src="./images/portfolio/portfolio-img8.jpg" alt="бирка" width="370" height="294">
+                        <h3 class="works-img-name">Проект <span lang="en">LAB</span></h3>
+                        <p class="works-img-description">Маркетинг</p>
                 </li>
-                <li>
-                    <img src="./images/portfolio/portfolio-img9.jpg" alt="руки набирают текст на ноутбуке" width="370" height="294">
-                        <h3 lang="en">Growing Business</h3>
-                        <p>Приложение</p>
+                <li class="works-list-item">
+                    <img class="works-list-img" src="./images/portfolio/portfolio-img9.jpg" alt="руки набирают текст на ноутбуке" width="370" height="294">
+                        <h3 class="works-img-name" lang="en">Growing Business</h3>
+                        <p class="works-img-description">Приложение</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
+    <footer class="contact-information">
         <!-- CONTACT INFORMATION -->
         <a class="link logo logo-white" href="./index.html" lang="en"><span class="part-logo">Web</span>Studio</a>
         <address class="address">
-            <ul class="list">
-                <li>
-                    <a class="link" href="https://goo.gl/maps/SzbFPfj4iSwk4chh7" target="_blank" rel="noopener noreferrer">
+            <ul class="contact-list list">
+                <li class="contact-list-item">
+                    <a class="contact-link-address link" href="https://goo.gl/maps/SzbFPfj4iSwk4chh7" target="_blank"
+                        rel="noopener noreferrer">
                         г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
-                <li>
-                    <a class="link" href="mailto:info@example.com" lang="en">info@example.com</a>
+                <li class="contact-list-item">
+                    <a class="contact-link-item link" href="mailto:info@example.com" lang="en">info@example.com</a>
                 </li>
-                <li>
-                    <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
+                <li class="contact-list-item">
+                    <a class="contact-link-item link" href="tel:+380991111111">+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
